objects/Commissions_Team__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Notes__c</fullName>
        <label>Commission Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Commission_Plan__c</fullName>
        <label>Commission Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BDM Plan</fullName>
                </value>
                <value>
                    <fullName>RM Plan</fullName>
                </value>
                <value>
                    <fullName>Sales Agent</fullName>
                </value>
                <value>
                    <fullName>KAM</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <isActive>false</isActive>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commissions_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commissions Team Member</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Commissions Teams</relationshipLabel>
        <relationshipName>Commissions_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Commissions Teams</relationshipLabel>
        <relationshipName>Commissions_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split__c</fullName>
        <label>Commission Split %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Member_Amount__c</fullName>
        <description>Read Only permission for all users and Edit permission for Sales Ops - Level 3 perm set group users
Editability access provided through the &quot;Commissions Team: Create/Delete records&quot; perm set
Used to break down the total Opportunity Amount applicable to team member splits. The Team Member Amount will directly apply to the BDMs quota.</description>
        <label>Team Member Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commissions Team</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Commissions Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>